# picktoss

./: .gitignore  Dockerfile  asd.py  push_llm_worker_image.sh  pyproject.toml
.aws/: main-backend-dev-task-definition.json  main-backend-prod-task-definition.json  main-backend-task-definition.json
.github/workflows/: main-backend-dev.yml  main-backend-prod.yml  main-backend.yml  question-generation-worker-dev.yml  question-generation-worker-prod.yml  question-generation-worker.yml
reminder/: __main__.py  config.py  container.py  server.py
reminder/core/database/: session_manager.py
reminder/core/discord/: discord_client.py
reminder/core/email/: email_manager.py  quiz_email_template.html
reminder/core/exception/: base.py
reminder/core/llm/: exception.py  openai.py  utils.py
reminder/core/s3/: s3_client.py
reminder/core/sqs/: sqs_client.py
reminder/dependency/: core.py  db.py
reminder/domain/category/: controller.py  dependency.py  entity.py  exception.py  model.py  repository.py  service.py
reminder/domain/document/: constant.py  controller.py  dependency.py  entity.py  enum.py  exception.py  model.py  repository.py  service.py
reminder/domain/feedback/: controller.py  model.py  repository.py  service.py
reminder/domain/member/: controller.py  dependency.py  dtos.py  entity.py  exceptions.py  model.py  repository.py  service.py
reminder/domain/payment/: controller.py  model.py  repository.py  service.py
reminder/domain/question/: constant.py  controller.py  dependency.py  entity.py  exception.py  model.py  (+2 more)
reminder/shared/: base_model.py
(+32 files in other folders)
